# hash-store

./: .travis.yml  CHANGELOG.md  README.md  hash-store.cabal  stack-8.2.2.yaml  stack.yaml
src/: HashStore.hs
