name:                hash-store
version:             0.0.0
description:         Hash as cache
synopsis:            Hash as cache
homepage:            https://github.com/kowainik/hash-store
bug-reports:         https://github.com/kowainik/hash-store/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            Hash, File
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
cabal-version:       1.24
tested-with:         GHC == 8.2.2, GHC == 8.4.3

library
  hs-source-dirs:      src
  exposed-modules:     HashStore
                       
  ghc-options:         -Wall
  build-depends:       base
                     
  default-language:    Haskell2010
  

source-repository head
  type:                git
  location:            https://github.com/kowainik/hash-store.git

